rasn-compiler-tests/tests/snapshots/edge_cases__distinguished_value_range.snap
---
source: rasn-compiler-tests/tests/edge_cases.rs
description: " Restricted ::= Distinguished (second|fourth..sixth|eighth)\n        Distinguished ::= INTEGER {\n            first(1),\n            second(2),\n            third(3),\n            fourth(4),\n            fifth(5),\n            sixth(6),\n            seventh(7),\n            eighth(8),\n            ninth(9),\n            tenth(10),\n        } (1..10)"
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    # [rasn (delegate , value ("1..=10") , named_values ("first" = 1 , "second" = 2 , "third" = 3 , "fourth" = 4 , "fifth" = 5 , "sixth" = 6 , "seventh" = 7 , "eighth" = 8 , "ninth" = 9 , "tenth" = 10))]
    pub struct Distinguished(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("2..=8"))]
    pub struct Restricted(pub Distinguished);
}
