rasn-compiler-tests/tests/snapshots/edge_cases__enum_and_distinguished_defaults.snap
---
source: rasn-compiler-tests/tests/edge_cases.rs
description: "\n        Test ::= SEQUENCE {\n            int IntWithDefault DEFAULT first,\n            enum EnumWithDefault DEFAULT first,\n        }\n\n        IntWithDefault ::= INTEGER {\n            first(1),\n            second(2)\n        } (1..10)\n\n        EnumWithDefault ::= ENUMERATED {\n            first(1),\n            second(2)\n        }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash , Copy)] # [rasn (enumerated)] pub enum EnumWithDefault { first = 1 , second = 2 , } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , value ("1..=10"))] pub struct IntWithDefault (pub u8) ; impl IntWithDefault { pub const FIRST : Self = Self (1) ; pub const SECOND : Self = Self (2) ; } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (automatic_tags)] pub struct Test { # [rasn (default = "test_int_default")] pub int : IntWithDefault , # [rasn (default = "test_r_enum_default" , identifier = "enum")] pub r_enum : EnumWithDefault , } impl Test { pub fn new (int : IntWithDefault , r_enum : EnumWithDefault) -> Self { Self { int , r_enum } } } impl std :: default :: Default for Test { fn default () -> Self { Self { int : test_int_default () , r_enum : test_r_enum_default () } } } fn test_int_default () -> IntWithDefault { IntWithDefault (1) } fn test_r_enum_default () -> EnumWithDefault { EnumWithDefault :: first } }
