rasn-compiler-tests/tests/snapshots/edge_cases__integer_type_alias_with_literal_default.snap
---
source: rasn-compiler-tests/tests/edge_cases.rs
description: "\n        MySeq ::= SEQUENCE { count MyUInt8 DEFAULT 1 }\n        MyUInt8 ::= INTEGER (0..255)\n    "
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct MySeq {
        #[rasn(default = "my_seq_count_default")]
        pub count: MyUInt8,
    }
    impl MySeq {
        pub fn new(count: MyUInt8) -> Self {
            Self { count }
        }
    }
    impl std::default::Default for MySeq {
        fn default() -> Self {
            Self {
                count: my_seq_count_default(),
            }
        }
    }
    fn my_seq_count_default() -> MyUInt8 {
        MyUInt8(1)
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=255"))]
    pub struct MyUInt8(pub u8);
}
