rasn-compiler-tests/tests/snapshots/edge_cases__same_variant_name.snap
---
source: rasn-compiler-tests/tests/edge_cases.rs
description: "\n        ChoiceType ::= CHOICE {\n            number INTEGER,\n            anotherNumber INTEGER,\n            bool BOOLEAN,\n            oneMoreNumber INTEGER,\n            aString IA5String\n        }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum ChoiceType { # [rasn (tag (context , 0))] number (Integer) , # [rasn (tag (context , 1))] anotherNumber (Integer) , # [rasn (tag (context , 2))] bool (bool) , # [rasn (tag (context , 3))] oneMoreNumber (Integer) , # [rasn (tag (context , 4))] aString (Ia5String) , } impl From < bool > for ChoiceType { fn from (value : bool) -> Self { Self :: bool (value) } } impl From < Ia5String > for ChoiceType { fn from (value : Ia5String) -> Self { Self :: aString (value) } } }
