rasn-compiler-tests/tests/snapshots/edge_cases__sequence_of_newtype_default.snap
---
source: rasn-compiler-tests/tests/edge_cases.rs
description: "\n        MyOctet ::= OCTET STRING\n        OctetList ::= SEQUENCE OF MyOctet\n        MySeq ::= SEQUENCE {\n            data OctetList DEFAULT { 'CAFE'H, 'BABE'H }\n        }\n    "
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MyOctet(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct MySeq {
        #[rasn(default = "my_seq_data_default")]
        pub data: OctetList,
    }
    impl MySeq {
        pub fn new(data: OctetList) -> Self {
            Self { data }
        }
    }
    impl std::default::Default for MySeq {
        fn default() -> Self {
            Self {
                data: my_seq_data_default(),
            }
        }
    }
    fn my_seq_data_default() -> OctetList {
        OctetList(alloc::vec![
            MyOctet(<OctetString as From<&'static [u8]>>::from(&[202, 254])),
            MyOctet(<OctetString as From<&'static [u8]>>::from(&[186, 190]))
        ])
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct OctetList(pub SequenceOf<MyOctet>);
}
